Add database files

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "transactcampusassessment"
+rootProject.name = "lorempicsumphotos"
 include ':app'
