--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Transactcampusassessment"
+        android:theme="@style/Theme.Lorempicsumphotos"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Transactcampusassessment">
+            android:theme="@style/Theme.Lorempicsumphotos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
